--- a/files/newtons-discovery.html
+++ b/files/newtons-discovery.html
@@ -372,7 +372,7 @@ background-color: black;
   <section class="home-section">
 <h1>Newton's Discovery; Romeo's Pirate Trap</h1>
 <p>Newton's powers have been neutralized because of Romeo's blockade of the asteroids; Pirate Robot wants to upgrade his ship.</p>
-<iframe src="../video/newtons-discovery.html"></iframe>
+<object data="../video/newtons-discovery.html" width="100%" height="400"></object>
 <br><br>
   <hr>
   <br>
