--- a/files/newtons-discovery.html
+++ b/files/newtons-discovery.html
@@ -370,11 +370,12 @@ background-color: black;
     </ul>
   </div>
   <section class="home-section">
+    <div style="padding:16px;"> 
 <h1>Newton's Discovery; Romeo's Pirate Trap</h1>
 <p>Newton's powers have been neutralized because of Romeo's blockade of the asteroids; Pirate Robot wants to upgrade his ship.</p>
 <object data="../video/newtons-discovery.html" width="100%" height="500px"></object>
+    </div>
 <br><br>
-  <hr>
   <br>
   <h1>Themes</h1>
 <p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
@@ -389,6 +390,7 @@ background-color: black;
 <button onclick="myFunction7()" style="background-color: purple;" class="button2"></button>
 <button onclick="myFunction8()" style="background-color: magenta;" class="button2"></button>
 </div>
+    </div>
 <script>
 
 function myFunction() {
