--- a/files/newtons-discovery.html
+++ b/files/newtons-discovery.html
@@ -372,11 +372,11 @@ background-color: black;
   <section class="home-section">
     <div style="padding:16px;"> 
 <h1>Newton's Discovery; Romeo's Pirate Trap</h1>
-<p>Newton's powers have been neutralized because of Romeo's blockade of the asteroids; Pirate Robot wants to upgrade his ship.</p>
+<p>Newton's powers have been neutralized because of Romeo's blockade of the asteroids; Pirate Robot wants to upgrade his ship. This episodes aired on 11 November 2022 1pm EST. </p>
       <br><br>
 <object data="../video/newtons-discovery.html" width="100%" height="500px"></object>
-<br><br><br><br>
-  <br>
+<br><br>
+  <hr>
   <h1>Themes</h1>
 <p>You could customise the themes of JstMStudio into a colour that you prefer. Select and choose from the color set below to make JstMStudio UI into your color preference.</p>
 <br>
