--- a/files/newtons-discovery.html
+++ b/files/newtons-discovery.html
@@ -374,7 +374,7 @@ background-color: black;
 <h1>Newton's Discovery; Romeo's Pirate Trap</h1>
 <p>Newton's powers have been neutralized because of Romeo's blockade of the asteroids; Pirate Robot wants to upgrade his ship. This episodes aired on 11 November 2022 1pm EST. </p>
       <br>
-<object data="../video/newtons-discovery.html" width="100%" height="500px"></object>
+<iframe src="https://drive.google.com/file/d/1_eWNSDL9YeMMfpNTt4MjJt_UMdNJXJ1L/preview" width="100%" height="500px" allow="autoplay"></iframe>
 <br><br><br><br>
   <hr>
   <h1>Themes</h1>
